--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,13 @@
-body {
-font-family: Arial, Helvetica, sans-serif;
+body{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-    color: #B6B5A9;
+h1{
+    color: palevioletred;
     text-align: center;
 }
 
-#left-container {
+#left-container{
     left: 0px;
 }
 
@@ -15,32 +15,32 @@ h1 {
     right: 0px;
 }
 
-.container {
- background-color: #eee;
- width: 15%;
- top: 0px;
- position: absolute;
- height: 100%;
- padding: 10px;
+.container{
+    background-color: #eee;
+    width: 15%;
+    top: 0px;
+    position: absolute;
+    height: 100%;
+    padding: 10px;
 }
 
-.plant-holder { 
-position: relative;
-height: 13%;
-left: -10px;
+.plant-holder{
+    position:relative;
+    height: 13%;
+    left: -10px;
 }
 
-.plant {
+.plant{
     position: absolute;
     max-width: 150%;
-    max-height: 150%;
-    z-index: 2; /* esten en primer termino*/
+   max-height: 150%;
+   z-index: 2;
 }
 
-.jar-walls {
+.jar-walls{
     height: 80%;
     width: 60%;
-    background: plum;
+    background: palevioletred;
     border-radius: 1rem;
     position: absolute;
     bottom: 0.5%;
@@ -49,10 +49,10 @@ left: -10px;
     z-index: 1;
 }
 
-.jar-top {
+.jar-top{
     width: 50%;
     height: 5%;
-    background:purple;
+    background: palevioletred;
     position: absolute;
     bottom: 80.5%;
     left: 25%;
@@ -60,17 +60,17 @@ left: -10px;
     z-index: 1;
 }
 
-.jar-bottom {
+.jar-bottom{
     width: 50%;
     height: 1%;
-    background: purple;
+    background: palevioletred;
     position: absolute;
     bottom: 0%;
     left: 25%;
     opacity: 0.7;
 }
 
-.dirt {
+.dirt{
     width: 60%;
     height: 5%;
     background: #3a241d;
@@ -82,22 +82,22 @@ left: -10px;
     z-index: -1;
 }
 
-.jar-glossy-long {
+.jar-glossy-long{
     width: 3%;
     height: 20%;
     border-radius: 2rem;
     background: #ddfbff;
     position: absolute;
     bottom: 20%;
-    left: 5%
+    left: 5%;
 }
 
-.jar-glossy-short {
+.jar-glossy-short{
     width: 3%;
     height: 5%;
     border-radius: 2rem;
     background: #ddfbff;
     position: absolute;
     bottom: 45%;
-    left: 5%
+    left: 5%;
 }
